--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
     "escape-string-regexp": "^1.0.5",
-    "prop-types": "^15.5.8",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.2.2",
+    "react-throttle": "^0.3.0",
+    "react-throttle-render": "^2.0.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
